# imechen

./: .gitignore  LICENSE.md  README.md  SPECIFICATION.md  install.sh  package.json
.github/workflows/: release.yml
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: animation.rs  image.rs  mod.rs  video.rs
src/components/layout/: AppLayout.tsx  Sidebar.module.css  Sidebar.tsx
src/components/ui/: DropZone.module.css  DropZone.tsx  FileListItem.module.css  FileListItem.tsx  GlassCard.module.css  GlassCard.tsx  GradientButton.module.css  GradientButton.tsx  NeuButton.module.css  NeuButton.tsx  NeuSelect.module.css  NeuSelect.tsx  PixelLoader.module.css  PixelLoader.tsx  ProgressBar.module.css  ProgressBar.tsx
src/lib/: tauri.ts
src/pages/: AnimationCreate.tsx  ImageConvert.tsx  Settings.tsx  VideoConvert.tsx
src/stores/: theme.ts
src/styles/: global.css  theme.css
