[package]
name = "imechen"
version = "0.1.0"
description = "Offline image/video converter"
authors = ["manomekun"]
edition = "2021"

[lib]
name = "imechen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"
imagequant = "4"
oxipng = { version = "9", default-features = false, features = ["parallel"] }
webp = "0.3"
ffmpeg-sidecar = "2"
